--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  docker: circleci/docker@2.1.4
+
 jobs:
   lint:
     docker:
@@ -12,6 +15,7 @@ jobs:
     docker:
       - image: cimg/node:18.12.0
     steps:
+      - setup_remote_docker
       - checkout
       - run: docker build -t hello-node .
 
