login to docker before pushing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - setup_remote_docker
       - checkout
       - run: docker build -t braxnu/hello-node .
+      - run: echo $DOCKERHUB_PASS | docker login -u $DOCKERHUB_USERNAME --password-stdin
       - run: docker push braxnu/hello-node
 
 workflows:
